Update index.html & style.css file at 23-09-2024_1906.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Urbanist:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
     <!-- Favicon -->
-    <link rel="icon" href="./images/favIcon.png">
+    <link rel="icon" href="./images/favIcon.webp">
 
     <!-- Custom CSS Link -->
     <link rel="stylesheet" href="css/style.css">
@@ -29,7 +29,7 @@
      <nav id="nav">
         <div class="container">
             <div class="dFlex">
-                <a href="./index.html"><img src="./images/logo.png" alt="logo" class="logo" width="148px" height="34"></a>
+                <a href="./index.html"><img src="./images/logo.webp" alt="logo" class="logo" width="148px" height="34"></a>
                 <ul class="navMenu">
                     <li><a href="#">home</a></li>
                     <li><a href="#">product</a></li>
@@ -44,9 +44,9 @@
 
     <!-- Banner Section Start -->
      <section id="banner">
-        <img src="./images/illustration_1.png" alt="bannerillustration" width="904" height="927" class="illustration_1">
-        <img src="./images/illustration_2.png" alt="bannerillustration" width="" height="" class="illustration_2">
-        <img src="./images/illustration_3.png" alt="bannerillustration" width="724" height="1337" class="illustration_3">
+        <img src="./images/illustration_1.webp" alt="bannerillustration" width="904" height="927" class="illustration_1">
+        <img src="./images/illustration_2.webp" alt="bannerillustration" width="" height="" class="illustration_2">
+        <img src="./images/illustration_3.webp" alt="bannerillustration" width="724" height="1337" class="illustration_3">
         <div class="container">
             <div class="bannerWrapper">
                 <div class="bannerText">
@@ -57,22 +57,178 @@
                     <a href="#" class="btn">Request Demo</a>
                     <a href="#" class="btn">Learn More</a>
                 </div>
-                <img src="./images/bannerimg.png" alt="Banner image" class="bannerImage">
+                <img src="./images/bannerimg.webp" alt="Banner image" width="683" height="311" class="bannerImage">
             </div>
         </div>
      </section>
     <!-- Banner Section End -->
 
     <!-- Dashboard Section Start -->
+     <section id="dashboard">
+        <img src="./images/dashboardBottomImg.webp" alt="DashboardBottomImg" width="1240" height="882" class="dashboardBottomImg">
+        <div class="container">
+            <ul class="dashCounter">
+                <li>
+                    <h2>2800+</h2>
+                    <p>USER ACTIVE</p>
+                </li>
+                <li>
+                    <h2>520+</h2>
+                    <p>TRUSTED BY USER</p>
+                </li>
+                <li>
+                    <h2>$180M+</h2>
+                    <p>TRANSACTION</p>
+                </li>
+            </ul>
+            <div class="dFlex">
+                <div class="left">
+                    <h2>Dashboard Feature Are Quite Complete</h2>
+                    <div class="dashCardWrapper">
+                        <div class="card">
+                            <div class="cardHead">
+                                <i class="fa-solid fa-arrow-up-right-dots"></i>
+                                <h3>Quick Transaction Easier</h3>
+                            </div>
+                            <div class="cardBody">
+                                <p>
+                                    Perform various transactions (transfers, request, top up and more) very easily. 
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="cardHead">
+                                <i class="fa-solid fa-arrow-up-right-dots"></i>
+                                <h3>Quick Transaction Easier</h3>
+                            </div>
+                            <div class="cardBody">
+                                <p>
+                                    Perform various transactions (transfers, request, top up and more) very easily. 
+                                </p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <div class="cardHead">
+                                <i class="fa-solid fa-arrow-up-right-dots"></i>
+                                <h3>Quick Transaction Easier</h3>
+                            </div>
+                            <div class="cardBody">
+                                <p>
+                                    Perform various transactions (transfers, request, top up and more) very easily. 
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="right">
+                    <p>
+                        DoWhith makes it easy for you to make payments through your dashboard easily without having to leave the house. We use the most advanced systems so security is guaranted
+                    </p>
+                    <img src="./images/dashboardImage.webp" alt="dahsboardImage" width="731" height="712" class="dahsboardImage">
+                </div>
+            </div>
+        </div>
+     </section>
     <!-- Dashboard Section End -->
 
     <!-- Money Transaction Section Start -->
+     <section id="money">
+        <div class="container">
+            <div class="dFlex">
+                <div class="left">
+                    <iframe width="600" height="600" src="https://www.youtube.com/embed/NPaH8SaZ-MA?si=Q8GGJBPUvWU2ULDP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                </div>
+                <div class="right">
+                    <h2>Pay and receive money hassle-free</h2>
+                    <p>
+                        Many great people use our app and are trusted by them, so our app is highly recommended for you
+                    </p>
+                    <ul>
+                        <li><i class="fa-solid fa-circle-check"></i> Instantly move money between sites</li>
+                        <li><i class="fa-solid fa-circle-check"></i> Attractive appearance is not boring</li>
+                        <li><i class="fa-solid fa-circle-check"></i> Withdraw to your bank in second</li>
+                        <li><i class="fa-solid fa-circle-check"></i> Used by millions around the world</li>
+                        <li><i class="fa-solid fa-circle-check"></i> Message with same user of DoWhith</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+     </section>
     <!-- Money Transaction Section End -->
 
     <!-- Support Section Start -->
+     <section id="support">
+        <div class="container">
+            <p>Support by</p>
+            <div class="dFlex">
+                <span>Company</span>
+                <span>Company</span>
+                <span>Company</span>
+                <span>Company</span>
+                <span>Company</span>
+            </div>
+        </div>
+     </section>
     <!-- Support Section End -->
 
     <!-- Planning Section Start -->
+     <section id="planning">
+        <div class="container">
+            <h2>Let's Planning With Us</h2>
+            <p class="planSubtitle">Let's manage your money with DoWith Dashboard make easily</p>
+            <div class="dFlex">
+                <div class="left">
+                    <div class="item">
+                        <span class="round"></span>
+                        <div>
+                            <h4>REGULER</h4>
+                            <p>The package you will get when you join DoWith</p>
+                        </div>
+                        <h5>FREE</h5>
+                    </div>
+                    <div class="item">
+                        <span class="round"></span>
+                        <div>
+                            <h4 class="planSilver">SILVER</h4>
+                            <p>Packages for students who want to learn to manage finances</p>
+                        </div>
+                        <h5>$19<span>/ month</span></h5>
+                    </div>
+                    <div class="item">
+                        <span class="round"></span>
+                        <div>
+                            <h4 class="planGold">GOLD</h4>
+                            <p>Packages for employees who want to manage finances</p>
+                        </div>
+                        <h5>$39<span>/ month</span></h5>
+                    </div>
+                    <div class="item">
+                        <span class="round"></span>
+                        <div>
+                            <h4 class="planPlatinum">PLATINUM</h4>
+                            <p>Packages for companies who want to manage finances</p>
+                        </div>
+                        <h5>$59<span>/ month</span></h5>
+                    </div>
+                </div>
+                <div class="right">
+                    <div class="planRight">
+                        <div class="timeWrapper">
+                            <span class="monthly">Monthly</span>
+                            <span class="active">Yearly</span>
+                        </div>
+                        <ul>
+                            <li>Active Monitoring <i class="fa-solid fa-circle-check"></i></li>
+                            <li>Manage Money and Service <i class="fa-solid fa-circle-check"></i></li>
+                            <li>Unlimited Customer Sevice <i class="fa-solid fa-circle-check"></i></li>
+                            <li>Unlimited Transaction <i class="fa-solid fa-circle-check"></i></li>
+                            <li>Unlock All Feature <i class="fa-solid fa-circle-check"></i></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+     </section>
     <!-- Planning Section End -->
 
     <!-- About Section Start -->
