Update up to about section at 24-09-2024_0539

--- a/index.html
+++ b/index.html
@@ -232,6 +232,52 @@
     <!-- Planning Section End -->
 
     <!-- About Section Start -->
+     <section id="about">
+        <div class="container">
+            <div class="dFlex">
+                <div class="left">
+                    <h2>People Are Saying About DoWhith</h2>
+                    <p>
+                        Everithing you need to accept to payment and grow your money of manage anywhere on the planet
+                    </p>
+                    <img src="./images/quotation.svg" alt="Quotation" width="46" height="38" class="quotation">
+                    <p class="abotPara">
+                        I am very helped by this E-Wallet application, my days are very easy to use this application and it is very helpful in my life, even I can pay in a short time 😍
+                    </p>
+                    <span class="userName">- Aria Zidaniro</span>
+                    <div class="aboutCircleWrapper">
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                        <span>
+                            <img src="./images/triangle.png" alt="triangle" width="8" height="14" class="triangle">
+                        </span>
+                    </div>
+                </div>
+                <div class="right">
+                    <div class="aboutCard">
+                        <div class="aboutCardHead">
+                            <img src="./images/favIcon.webp" width="64" height="58" alt="Get Satart">
+                            <h4>Get Started</h4>
+                        </div>
+                        <form action="#" id="aboutForm">
+                            <div>
+                                <label for="email">Email</label>
+                                <input type="email" name="email" id="email" placeholder="your@email.xyz">
+                            </div>
+                            <div>
+                                <label for="message">Message</label>
+                                <textarea name="message" id="message" rows="5"></textarea>
+                            </div>
+                            <button type="submit">Request Demo</button>
+                            <p><span>or</span>Start Free Trial</p>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+     </section>
     <!-- About Section End -->
 
     <!-- Footer Section Start -->
