Update up to Footer Section at 24-096-2024_0823.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
      <nav id="nav">
         <div class="container">
             <div class="dFlex">
-                <a href="./index.html"><img src="./images/logo.webp" alt="logo" class="logo" width="148px" height="34"></a>
+                <a href="./index.html"><img src="./images/logo.webp" alt="logo" class="logo" width="148" height="34"></a>
                 <ul class="navMenu">
                     <li><a href="#">home</a></li>
                     <li><a href="#">product</a></li>
@@ -268,7 +268,7 @@
                             </div>
                             <div>
                                 <label for="message">Message</label>
-                                <textarea name="message" id="message" rows="5"></textarea>
+                                <textarea name="message" id="message" rows="5" placeholder="Write Your Message"></textarea>
                             </div>
                             <button type="submit">Request Demo</button>
                             <p><span>or</span>Start Free Trial</p>
@@ -281,6 +281,53 @@
     <!-- About Section End -->
 
     <!-- Footer Section Start -->
+     <footer id="footer">
+        <div class="container">
+            <div class="dFlex">
+                <div class="left">
+                    <a href="./index.html"><img src="./images/footerLogo.webp" alt="logo" class="logo" width="192" height="32"></a>
+                    <p>Only wallet you need to carry that allows making online payment</p>
+                </div>
+                <div class="right">
+                    <ul>
+                        <li>Featured</li>
+                        <li>Transaction</li>
+                        <li>Message</li>
+                        <li>Statistic</li>
+                        <li>Account</li>
+                    </ul>
+                    <ul>
+                        <li>Planning</li>
+                        <li>Reguler</li>
+                        <li>Silver</li>
+                        <li>Gold</li>
+                        <li>Platinum</li>
+                    </ul>
+                    <ul>
+                        <li>Contact Us</li>
+                        <li>Testimony</li>
+                        <li>Request Demo</li>
+                        <li>Start Free Trial</li>
+                        <li>Download App</li>
+                    </ul>
+                    <ul>
+                        <li>Policies</li>
+                        <li>Term</li>
+                        <li>Privacy</li>
+                        <li>Licences</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footerBottom">
+                <p>©2022 DoWhith LTD. All rights reserved by Alvin Elian</p>
+                <div class="footerIcon">
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-square-instagram"></i>
+                    <i class="fa-brands fa-twitter"></i>
+                </div>
+            </div>
+        </div>
+     </footer>
     <!-- Footer Section End -->
 
     <!-- Fontawesome CDN Link -->
