Update index.html & style.css file at 24-09-2024_1005.

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div class="container">
             <div class="dFlex">
                 <div class="left">
-                    <iframe width="600" height="600" src="https://www.youtube.com/embed/NPaH8SaZ-MA?si=Q8GGJBPUvWU2ULDP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                     <iframe src="https://www.youtube.com/embed/NPaH8SaZ-MA?autoplay=0&mute=1" title="Leaning Video" width="600" height="600" frameborder="0"></iframe>
                 </div>
                 <div class="right">
                     <h2>Pay and receive money hassle-free</h2>
@@ -181,34 +181,34 @@
                     <div class="item">
                         <span class="round"></span>
                         <div>
-                            <h4>REGULER</h4>
+                            <h2>REGULER</h2>
                             <p>The package you will get when you join DoWith</p>
                         </div>
-                        <h5>FREE</h5>
+                        <h3>FREE</h3>
                     </div>
                     <div class="item">
                         <span class="round"></span>
                         <div>
-                            <h4 class="planSilver">SILVER</h4>
+                            <h2 class="planSilver">SILVER</h2>
                             <p>Packages for students who want to learn to manage finances</p>
                         </div>
-                        <h5>$19<span>/ month</span></h5>
+                        <h3>$19<span>/ month</span></h3>
                     </div>
                     <div class="item">
                         <span class="round"></span>
                         <div>
-                            <h4 class="planGold">GOLD</h4>
+                            <h2 class="planGold">GOLD</h2>
                             <p>Packages for employees who want to manage finances</p>
                         </div>
-                        <h5>$39<span>/ month</span></h5>
+                        <h3>$39<span>/ month</span></h3>
                     </div>
                     <div class="item">
                         <span class="round"></span>
                         <div>
-                            <h4 class="planPlatinum">PLATINUM</h4>
+                            <h2 class="planPlatinum">PLATINUM</h2>
                             <p>Packages for companies who want to manage finances</p>
                         </div>
-                        <h5>$59<span>/ month</span></h5>
+                        <h3>$59<span>/ month</span></h3>
                     </div>
                 </div>
                 <div class="right">
@@ -259,7 +259,7 @@
                     <div class="aboutCard">
                         <div class="aboutCardHead">
                             <img src="./images/favIcon.webp" width="60" height="48" alt="Get Satart">
-                            <h4>Get Started</h4>
+                            <h2>Get Started</h2>
                         </div>
                         <form action="#" id="aboutForm">
                             <div>
