--- a/index.html
+++ b/index.html
@@ -291,30 +291,30 @@
                 <div class="right">
                     <ul>
                         <li>Featured</li>
-                        <li>Transaction</li>
-                        <li>Message</li>
-                        <li>Statistic</li>
-                        <li>Account</li>
+                        <li><a href="#">Transaction</a></li>
+                        <li><a href="#">Message</a></li>
+                        <li><a href="#">Statistic</a></li>
+                        <li><a href="#">Account</a></li>
                     </ul>
                     <ul>
                         <li>Planning</li>
-                        <li>Reguler</li>
-                        <li>Silver</li>
-                        <li>Gold</li>
-                        <li>Platinum</li>
+                        <li><a href="#">Reguler</a></li>
+                        <li><a href="#">Silver</a></li>
+                        <li><a href="#">Gold</a></li>
+                        <li><a href="#">Platinum</a></li>
                     </ul>
                     <ul>
                         <li>Contact Us</li>
-                        <li>Testimony</li>
-                        <li>Request Demo</li>
-                        <li>Start Free Trial</li>
-                        <li>Download App</li>
+                        <li><a href="#">Testimony</a></li>
+                        <li><a href="#">Request Demo</a></li>
+                        <li><a href="#">Start Free Trial</a></li>
+                        <li><a href="#">Download App</a></li>
                     </ul>
                     <ul>
                         <li>Policies</li>
-                        <li>Term</li>
-                        <li>Privacy</li>
-                        <li>Licences</li>
+                        <li><a href="#">Term</a></li>
+                        <li><a href="#">Privacy</a></li>
+                        <li><a href="#">Licences</a></li>
                     </ul>
                 </div>
             </div>
